New version: Lycian v0.1.6
UUID: 7c215dd3-d1b4-4517-b6c6-0123f1059a20
Repo: https://github.com/neelsmith/Lycian.jl.git
Tree: 0e60ee71aa0ca0f7e403045738787529301b084a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/Lycian/Versions.toml
+++ b/L/Lycian/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "69b3fd01cbbc89e193ae9f47f1a37824dd22dc7d"
 
 ["0.1.5"]
 git-tree-sha1 = "efe4830fb0ec92cf56c13da457e2ad506326ab8d"
+
+["0.1.6"]
+git-tree-sha1 = "0e60ee71aa0ca0f7e403045738787529301b084a"
