--- a/L/Lycian/Versions.toml
+++ b/L/Lycian/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "efe4830fb0ec92cf56c13da457e2ad506326ab8d"
 
 ["0.1.6"]
 git-tree-sha1 = "0e60ee71aa0ca0f7e403045738787529301b084a"
+
+["0.1.7"]
+git-tree-sha1 = "92df94c85a6e84dfa786821a97418afc3fd16f06"
