--- a/I/InterProcessCommunication/Versions.toml
+++ b/I/InterProcessCommunication/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "9aa5f76ac3c340e569dd9270b138dfe2e6511c44"
+
+["0.1.1"]
+git-tree-sha1 = "d64b1081541fe3a51f30154cbbd60529903e6e65"
