New version: SimpleGraphAlgorithms v0.4.8
UUID: 41400c72-0c58-5c16-8579-4ecbce768449
Repo: https://github.com/scheinerman/SimpleGraphAlgorithms.jl.git
Tree: d530c77f08ea6bff5208209999ba84b1a30fa5ca

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SimpleGraphAlgorithms/Versions.toml
+++ b/S/SimpleGraphAlgorithms/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "ae18f7bd7621f287092b4b26bd1c7fddd83be9a5"
 
 ["0.4.7"]
 git-tree-sha1 = "4d7ca8dff5a3177f94d7b1ab28db8ea809020b94"
+
+["0.4.8"]
+git-tree-sha1 = "d530c77f08ea6bff5208209999ba84b1a30fa5ca"
