New version: NeXLUncertainties v0.2.2
UUID: 7127f3d6-1721-46bc-bb38-8fc703dd438e
Repo: https://github.com/usnistgov/NeXLUncertainties.jl.git
Tree: 0b9b04309d0f38ac069ba0e48b11fea069a8b612

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/NeXLUncertainties/Versions.toml
+++ b/N/NeXLUncertainties/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "6ff9567fd49ac280cc8fddeb7b1a3708d1d45a5c"
 
 ["0.2.1"]
 git-tree-sha1 = "5e691213aa5c6c01c109e1220b850bbab42849a3"
+
+["0.2.2"]
+git-tree-sha1 = "0b9b04309d0f38ac069ba0e48b11fea069a8b612"
