--- a/N/NeXLUncertainties/Compat.toml
+++ b/N/NeXLUncertainties/Compat.toml
@@ -7,3 +7,7 @@ julia = "1.4.0-1"
 DataFrames = "0.21-0.22"
 Distributions = "0.22.6-0.24"
 julia = "1.5.0-1"
+
+["0.2.2-0"]
+Formatting = "0.4"
+LaTeXStrings = "1.2.0-1"
