--- a/N/NeXLMatrixCorrection/Versions.toml
+++ b/N/NeXLMatrixCorrection/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "c12d2bed9b9cdcb06f98568d6589295427dfa587"
 
 ["0.2.1"]
 git-tree-sha1 = "2d583fba72d205c34b6da8c3e09f04eb75ac2129"
+
+["0.2.2"]
+git-tree-sha1 = "95f1cb16051cc8b2b8aa01424f9bdc6b4f473038"
