New version: CmdStan v6.1.8
UUID: 593b3428-ca2f-500c-ae53-031589ec8ddd
Repo: https://github.com/StanJulia/CmdStan.jl.git
Tree: 24b98b003f4b58440e3cf12afbc97a3208a3af48

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CmdStan/Versions.toml
+++ b/C/CmdStan/Versions.toml
@@ -141,3 +141,6 @@ git-tree-sha1 = "3516feba288c902ef33255a70ec3f8999f026eec"
 
 ["6.1.7"]
 git-tree-sha1 = "3cbe0d3b428f4126fb92f400ab5ed386493f504c"
+
+["6.1.8"]
+git-tree-sha1 = "24b98b003f4b58440e3cf12afbc97a3208a3af48"
