New version: StanSample v3.0.7
UUID: c1514b29-d3a0-5178-b312-660c88baa699
Repo: https://github.com/StanJulia/StanSample.jl.git
Tree: 48a8ffc7a6e3e00c676e357e0e4e73e0925b17f0

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StanSample/Versions.toml
+++ b/S/StanSample/Versions.toml
@@ -111,3 +111,6 @@ git-tree-sha1 = "995cd8b508a916b8418c07304d9abc5ac5799c3d"
 
 ["3.0.6"]
 git-tree-sha1 = "fd18bc5e92629dd827858a92831698f0a5d3ec79"
+
+["3.0.7"]
+git-tree-sha1 = "48a8ffc7a6e3e00c676e357e0e4e73e0925b17f0"
