New version: SimpleGraphAlgorithms v0.4.10
UUID: 41400c72-0c58-5c16-8579-4ecbce768449
Repo: https://github.com/scheinerman/SimpleGraphAlgorithms.jl.git
Tree: 2ead6c67b1449fcdffbf0deafd80b4aab4fd768b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SimpleGraphAlgorithms/Versions.toml
+++ b/S/SimpleGraphAlgorithms/Versions.toml
@@ -60,3 +60,6 @@ git-tree-sha1 = "d530c77f08ea6bff5208209999ba84b1a30fa5ca"
 
 ["0.4.9"]
 git-tree-sha1 = "f0c0758949752cd2d8ead549821a7b764f7cf8aa"
+
+["0.4.10"]
+git-tree-sha1 = "2ead6c67b1449fcdffbf0deafd80b4aab4fd768b"
