--- a/G/GPUArrays/Compat.toml
+++ b/G/GPUArrays/Compat.toml
@@ -37,7 +37,7 @@ FillArrays = "0.3-0.7"
 AbstractFFTs = "0.4"
 
 ["2.0.1-3"]
-AbstractFFTs = "0.4-0.5"
+AbstractFFTs = ["0.4-0.5", "1"]
 
 [3]
 julia = "1.3.0-1"
