--- a/C/CUDA/Compat.toml
+++ b/C/CUDA/Compat.toml
@@ -25,7 +25,7 @@ BinaryProvider = "0.3-0.5"
 Reexport = "0.2"
 
 ["0-2.5"]
-AbstractFFTs = ["0.4-0.5", "1"]
+AbstractFFTs = "0.4-0.5"
 
 [1]
 Adapt = "2"
