New version: CitableText v0.6.0
UUID: 41e66566-473b-49d4-85b7-da83b66615d8
Repo: https://github.com/cite-architecture/CitableText.jl.git
Tree: 457b7f9bd625b2988ffc32f59122e778bdee4f2a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableText/Versions.toml
+++ b/C/CitableText/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "86b6a790e2af40f6c3db5d7bb12aacc223d6c9a5"
 
 ["0.5.0"]
 git-tree-sha1 = "717cae10c76416054375330b8d8609c61e4a675e"
+
+["0.6.0"]
+git-tree-sha1 = "457b7f9bd625b2988ffc32f59122e778bdee4f2a"
