--- a/Registry.toml
+++ b/Registry.toml
@@ -3075,6 +3075,7 @@ some amount of consideration when choosing package names.
 97e4c2e4-f0cb-461e-a268-312dec255b76 = { name = "JSXGraph", path = "J/JSXGraph" }
 97e8ad84-0770-496d-b901-33f7e6c3230c = { name = "RandomTweaks", path = "R/RandomTweaks" }
 9828b13b-9cf9-4ed3-a262-66ff2e7f23f2 = { name = "QuandlAccess", path = "Q/QuandlAccess" }
+98344202-5a1c-56b1-83aa-57a11ac3493f = { name = "SymFEL", path = "S/SymFEL" }
 98454f44-f182-4945-8d34-ddde53e72162 = { name = "DotMaps", path = "D/DotMaps" }
 984bce1d-4616-540c-a9ee-88d1112d94c9 = { name = "LambertW", path = "L/LambertW" }
 9854c450-6826-470b-b7cd-d3803b32f4ba = { name = "Fermionic", path = "F/Fermionic" }
