New version: NeXLCore v0.2.3
UUID: 93a0284f-3680-435e-8d39-dd6e52a1dbc8
Repo: https://github.com/usnistgov/NeXLCore.jl.git
Tree: d170ad98146def2c93cce2500038933c0ea7f805

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/NeXLCore/Compat.toml
+++ b/N/NeXLCore/Compat.toml
@@ -42,8 +42,13 @@ FileIO = "1.4.0-1"
 GeometryBasics = "0.3"
 StaticArrays = ["0.12", "1"]
 
+["0.2.2"]
+Reexport = "1"
+
 ["0.2.2-0"]
 LaTeXStrings = "1.2.0-1"
 NeXLUncertainties = "0.2.2-0.2"
-Reexport = "1"
 Unitful = "1.6.0-1"
+
+["0.2.3-0"]
+Reexport = ["0.2", "1"]
