--- a/N/NeXLCore/Versions.toml
+++ b/N/NeXLCore/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "48a9fc87d9469d2fdc5f4047df7bc36738494e50"
 
 ["0.2.2"]
 git-tree-sha1 = "76b65cf9ca64827aa5ace97beb5037fb9870ecb5"
+
+["0.2.3"]
+git-tree-sha1 = "d170ad98146def2c93cce2500038933c0ea7f805"
