New version: YisyAIFramework v0.3.5
UUID: 1833fadb-d4a3-4bdc-92b3-7dbe365d2b7d
Repo: https://github.com/SkyWorld117/YisyAIFramework.jl.git
Tree: e61970a0dfce9091e0caa129c6d5984a3959142b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Y/YisyAIFramework/Versions.toml
+++ b/Y/YisyAIFramework/Versions.toml
@@ -1,2 +1,5 @@
 ["0.3.4"]
 git-tree-sha1 = "dc06a6292f9db1eabd7ebb434f56233c3e21793e"
+
+["0.3.5"]
+git-tree-sha1 = "e61970a0dfce9091e0caa129c6d5984a3959142b"
