--- a/N/NeXLMatrixCorrection/Compat.toml
+++ b/N/NeXLMatrixCorrection/Compat.toml
@@ -32,9 +32,14 @@ SpecialFunctions = ["0.10", "1.1.0-1"]
 ["0.2.1-0"]
 DataFrames = "0.22"
 
+["0.2.2"]
+Reexport = "1"
+
 ["0.2.2-0"]
 NeXLCore = "0.2.2-0.2"
 NeXLUncertainties = "0.2.2-0.2"
-Reexport = "1"
 Roots = "1"
 SpecialFunctions = "1.3.0-1"
+
+["0.2.3-0"]
+Reexport = ["0.2", "1"]
