--- a/N/NeXLMatrixCorrection/Versions.toml
+++ b/N/NeXLMatrixCorrection/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "2d583fba72d205c34b6da8c3e09f04eb75ac2129"
 
 ["0.2.2"]
 git-tree-sha1 = "95f1cb16051cc8b2b8aa01424f9bdc6b4f473038"
+
+["0.2.3"]
+git-tree-sha1 = "a4bf8ddbe965e22979bad3202f8d4d8c10819481"
