--- a/D/Dubins3D/Versions.toml
+++ b/D/Dubins3D/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "988214630760dccf02243b45b200fc6d2f0638d1"
 
 ["0.2.1"]
 git-tree-sha1 = "7c64637dc6231a1f098aaf43439be99927eefad1"
+
+["0.2.2"]
+git-tree-sha1 = "e2961a93740db758514c57f5fbfa754d19d9f15f"
