New version: EditorsRepo v0.6.14
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 849257a01eb403ad4b16e7249c20daa96210ad52

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -66,3 +66,6 @@ git-tree-sha1 = "3654fa221a289abb77704b2111d9455600f9e296"
 
 ["0.6.13"]
 git-tree-sha1 = "fda67e66f26e602b3ee6c89a513700b57541c0f3"
+
+["0.6.14"]
+git-tree-sha1 = "849257a01eb403ad4b16e7249c20daa96210ad52"
