--- a/E/EditionBuilders/Compat.toml
+++ b/E/EditionBuilders/Compat.toml
@@ -7,5 +7,8 @@ julia = "1.5.0-1"
 ["0-0.2.10"]
 CitableText = "0.4"
 
-["0.2.11-0"]
+["0.2.11-0.2.12"]
 CitableText = "0.4-0.5"
+
+["0.2.13-0"]
+CitableText = "0.4-0.6"
