--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "0ff3051ffe710c2c5f6bb083cde2a03740314297"
 
 ["0.2.12"]
 git-tree-sha1 = "25d577053324bfe297aefb66a1a07ecdc0b060d4"
+
+["0.2.13"]
+git-tree-sha1 = "85a366f9825ecba5f356dfbcaf6df258f5da5055"
