New version: CitablePhysicalText v0.2.1
UUID: e38a874e-a7c2-4ff3-8dea-81ae2e5c9b07
Repo: https://github.com/cite-architecture/CitablePhysicalText.jl.git
Tree: 140047ee7ee51a83c93e6786cdbe781836d82b9b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitablePhysicalText/Versions.toml
+++ b/C/CitablePhysicalText/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "15a082170fd9e17ccc860b13fbfcad88a61b81c9"
 
 ["0.2.0"]
 git-tree-sha1 = "bb6cea258c75fc0066ca595e85c14072c8582cfb"
+
+["0.2.1"]
+git-tree-sha1 = "140047ee7ee51a83c93e6786cdbe781836d82b9b"
