New version: EditorsRepo v0.7.0
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 44476eef27b598ae517aa5881897cfa8ea48a85b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -69,3 +69,6 @@ git-tree-sha1 = "fda67e66f26e602b3ee6c89a513700b57541c0f3"
 
 ["0.6.14"]
 git-tree-sha1 = "849257a01eb403ad4b16e7249c20daa96210ad52"
+
+["0.7.0"]
+git-tree-sha1 = "44476eef27b598ae517aa5881897cfa8ea48a85b"
