--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -20,7 +20,7 @@ CitableTeiReaders = "0.2"
 ["0.2.1-0"]
 CitableObject = "0.2"
 
-["0.3.1-0"]
+["0.3.1-0.6"]
 CitableText = "0.4"
 
 ["0.3.2-0"]
@@ -35,20 +35,22 @@ Orthography = "0.3"
 ["0.6.10-0"]
 Lycian = "0.1"
 
-["0.6.11-0"]
+["0.6.11-0.6"]
 EditionBuilders = "0.2.3-0.2"
 
 ["0.6.12-0"]
-CSV = "0.8.2-0.8"
 CategoricalArrays = "0.9"
 DataFrames = "0.22.3-0.22"
-PolytonicGreek = "0.1"
 PooledArrays = "0.5.3-0.5"
+
+["0.6.12-0.6"]
+CSV = "0.8.2-0.8"
+PolytonicGreek = "0.1"
 
 ["0.6.13-0"]
 Orthography = "0.5"
 
-["0.6.5-0"]
+["0.6.5-0.6"]
 CitableTeiReaders = "0.4"
 
 ["0.6.6"]
@@ -62,3 +64,10 @@ EditionBuilders = "0.2.2-0.2"
 
 ["0.6.9-0.6.12"]
 Orthography = "0.4.1-0.4"
+
+["0.7-0"]
+CSV = "0.8"
+CitableTeiReaders = "0.4-0.5"
+CitableText = "0.5-0.6"
+EditionBuilders = "0.2"
+PolytonicGreek = "0.1-0.2"
