New version: CanopyLayers v0.1.6
UUID: 677f5362-5107-42e4-8e81-51d9c4a1f96c
Repo: https://github.com/Yujie-W/CanopyLayers.jl.git
Tree: 564eb5f5105e470d4f774210cd420eacf52fcb9d

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CanopyLayers/Versions.toml
+++ b/C/CanopyLayers/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "a69522cfb29799ee8f519957cb6e1ac51478db36"
 
 ["0.1.5"]
 git-tree-sha1 = "8d7bbe016227e8b14e7ac7b0a2ccf6b29a769c3a"
+
+["0.1.6"]
+git-tree-sha1 = "564eb5f5105e470d4f774210cd420eacf52fcb9d"
