--- a/Registry.toml
+++ b/Registry.toml
@@ -69,6 +69,7 @@ some amount of consideration when choosing package names.
 02c8fc9c-b97f-50b9-bbe4-9be30ff0a78a = { name = "XML2_jll", path = "X/XML2_jll" }
 02d47bb6-7ce6-556a-be16-bb1710789e2b = { name = "TensorCast", path = "T/TensorCast" }
 02d9b4f0-7821-44c6-acbd-01a1ab91b72e = { name = "AdditionalUnits", path = "A/AdditionalUnits" }
+02ec7d09-9c23-427e-9147-b12e6bb36e7e = { name = "Ueauty", path = "U/Ueauty" }
 02f895e8-fdb1-4346-8fe6-c721699f5126 = { name = "Mera", path = "M/Mera" }
 02fcd773-0e25-5acc-982a-7f6622650795 = { name = "ImageTransformations", path = "I/ImageTransformations" }
 03207cf0-e2b3-4b91-9ca8-690cf0fb507e = { name = "DashBase", path = "D/DashBase" }
