--- a/Registry.toml
+++ b/Registry.toml
@@ -1634,6 +1634,7 @@ some amount of consideration when choosing package names.
 4f18b42c-503e-5345-9536-bb0f25fc7038 = { name = "BusinessDays", path = "B/BusinessDays" }
 4f1ea46c-232b-54a6-9b17-cc2d0f3e6598 = { name = "AWSCore", path = "A/AWSCore" }
 4f207c7e-01da-51d7-a1a0-c8c06dd1d883 = { name = "RadiationSpectra", path = "R/RadiationSpectra" }
+4f20bf2b-1847-46b1-b596-cf84ac7c75b9 = { name = "PET", path = "P/PET" }
 4f36922e-b395-5139-af69-051d0331eef0 = { name = "PhilipsHue", path = "P/PhilipsHue" }
 4f449596-a032-5618-b826-5a251cb6dc11 = { name = "MatrixNetworks", path = "M/MatrixNetworks" }
 4f4ee721-4970-5af2-8560-6c1d960e3231 = { name = "ClimateTools", path = "C/ClimateTools" }
