New version: Lycian v0.1.8
UUID: 7c215dd3-d1b4-4517-b6c6-0123f1059a20
Repo: https://github.com/neelsmith/Lycian.jl.git
Tree: eb1e324fc2262181a575bc6948ffc69c9ebfee49

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/Lycian/Versions.toml
+++ b/L/Lycian/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "0e60ee71aa0ca0f7e403045738787529301b084a"
 
 ["0.1.7"]
 git-tree-sha1 = "92df94c85a6e84dfa786821a97418afc3fd16f06"
+
+["0.1.8"]
+git-tree-sha1 = "eb1e324fc2262181a575bc6948ffc69c9ebfee49"
