--- a/G/GMP_jll/Versions.toml
+++ b/G/GMP_jll/Versions.toml
@@ -29,6 +29,7 @@ yanked = true
 
 ["6.1.2+9"]
 git-tree-sha1 = "40b069f884021e4a7aa78faeb69d5865e9d41c98"
+yanked = true
 
 ["6.2.0+0"]
 git-tree-sha1 = "1976f0824aa2a575d3c6e97b6afb8c5871672aa8"
